parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANNOTATION

Grammar

Rule 0     S' -> start
Rule 1     start -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID ;
Rule 7     var_declaration -> type_specifier ID [ NUM ] = { numlist } ;
Rule 8     var_declaration -> type_specifier ID [ NUM ] = STRING ;
Rule 9     type_specifier -> INT
Rule 10    type_specifier -> VOID
Rule 11    type_specifier -> CHAR
Rule 12    type_specifier -> CHAR_STAR
Rule 13    type_specifier -> INT_STAR
Rule 14    fun_declaration -> type_specifier ID ( params ) statement_block
Rule 15    fun_declaration -> statement_block
Rule 16    params -> param_list
Rule 17    params -> VOID
Rule 18    params -> <empty>
Rule 19    param_list -> param_list , param
Rule 20    param_list -> param
Rule 21    param -> type_specifier ID
Rule 22    param -> type_specifier ID [ ]
Rule 23    statement_block -> { statement_list }
Rule 24    statement_list -> statement_list statement
Rule 25    statement_list -> <empty>
Rule 26    statement -> expression_statement
Rule 27    statement -> statement_block
Rule 28    statement -> if_else_statements
Rule 29    statement -> while_statments
Rule 30    statement -> return_statements
Rule 31    statement -> var_declaration
Rule 32    expression_statement -> expression ;
Rule 33    expression_statement -> ;
Rule 34    if_else_statements -> IF ( expression ) statement
Rule 35    if_else_statements -> IF ( expression ) statement ELSE statement
Rule 36    while_statments -> WHILE ( expression ) statement
Rule 37    return_statements -> RETURN ;
Rule 38    return_statements -> RETURN expression ;
Rule 39    expression -> var = expression
Rule 40    expression -> simple_expression
Rule 41    expression -> type_specifier var = expression
Rule 42    expression -> STRING
Rule 43    numlist -> numlist , NUM
Rule 44    numlist -> NUM
Rule 45    var -> ID
Rule 46    var -> ID [ expression ]
Rule 47    simple_expression -> addsub_object relational_operator addsub_object
Rule 48    simple_expression -> addsub_object
Rule 49    relational_operator -> LE
Rule 50    relational_operator -> <
Rule 51    relational_operator -> >
Rule 52    relational_operator -> GE
Rule 53    relational_operator -> EE
Rule 54    relational_operator -> NE
Rule 55    addsub_object -> addsub_object add_sub muldiv_object
Rule 56    addsub_object -> muldiv_object
Rule 57    muldiv_object -> muldiv_object mul_div object
Rule 58    muldiv_object -> object
Rule 59    add_sub -> +
Rule 60    add_sub -> -
Rule 61    mul_div -> *
Rule 62    mul_div -> /
Rule 63    object -> ( expression )
Rule 64    object -> var
Rule 65    object -> fun_value
Rule 66    object -> NUM
Rule 67    object -> BOOLEAN
Rule 68    fun_value -> ID ( args )
Rule 69    args -> arg_list
Rule 70    args -> <empty>
Rule 71    arg_list -> arg_list , expression
Rule 72    arg_list -> expression

Terminals, with rules where they appear

(                    : 14 34 35 36 63 68
)                    : 14 34 35 36 63 68
*                    : 61
+                    : 59
,                    : 19 43 71
-                    : 60
/                    : 62
;                    : 6 7 8 32 33 37 38
<                    : 50
=                    : 7 8 39 41
>                    : 51
ANNOTATION           : 
BOOLEAN              : 67
CHAR                 : 11
CHAR_STAR            : 12
EE                   : 53
ELSE                 : 35
GE                   : 52
ID                   : 6 7 8 14 21 22 45 46 68
IF                   : 34 35
INT                  : 9
INT_STAR             : 13
LE                   : 49
NE                   : 54
NUM                  : 7 8 43 44 66
RETURN               : 37 38
STRING               : 8 42
VOID                 : 10 17
WHILE                : 36
[                    : 7 8 22 46
]                    : 7 8 22 46
error                : 
{                    : 7 23
}                    : 7 23

Nonterminals, with rules where they appear

add_sub              : 55
addsub_object        : 47 47 48 55
arg_list             : 69 71
args                 : 68
declaration          : 2 3
declaration_list     : 1 2
expression           : 32 34 35 36 38 39 41 46 63 71 72
expression_statement : 26
fun_declaration      : 5
fun_value            : 65
if_else_statements   : 28
mul_div              : 57
muldiv_object        : 55 56 57
numlist              : 7 43
object               : 57 58
param                : 19 20
param_list           : 16 19
params               : 14
relational_operator  : 47
return_statements    : 30
simple_expression    : 40
start                : 0
statement            : 24 34 35 35 36
statement_block      : 14 15 27
statement_list       : 23 24
type_specifier       : 6 7 8 14 21 22 41
var                  : 39 41 64
var_declaration      : 4 31
while_statments      : 29

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID ;
    (7) var_declaration -> . type_specifier ID [ NUM ] = { numlist } ;
    (8) var_declaration -> . type_specifier ID [ NUM ] = STRING ;
    (14) fun_declaration -> . type_specifier ID ( params ) statement_block
    (15) fun_declaration -> . statement_block
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . CHAR_STAR
    (13) type_specifier -> . INT_STAR
    (23) statement_block -> . { statement_list }

    INT             shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    CHAR_STAR       shift and go to state 12
    INT_STAR        shift and go to state 13
    {               shift and go to state 7

    start                          shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6
    statement_block                shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID ;
    (7) var_declaration -> . type_specifier ID [ NUM ] = { numlist } ;
    (8) var_declaration -> . type_specifier ID [ NUM ] = STRING ;
    (14) fun_declaration -> . type_specifier ID ( params ) statement_block
    (15) fun_declaration -> . statement_block
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . CHAR_STAR
    (13) type_specifier -> . INT_STAR
    (23) statement_block -> . { statement_list }

    $end            reduce using rule 1 (start -> declaration_list .)
    INT             shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    CHAR_STAR       shift and go to state 12
    INT_STAR        shift and go to state 13
    {               shift and go to state 7

    declaration                    shift and go to state 14
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6
    statement_block                shift and go to state 8

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    CHAR_STAR       reduce using rule 3 (declaration_list -> declaration .)
    INT_STAR        reduce using rule 3 (declaration_list -> declaration .)
    {               reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    CHAR_STAR       reduce using rule 4 (declaration -> var_declaration .)
    INT_STAR        reduce using rule 4 (declaration -> var_declaration .)
    {               reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    CHAR            reduce using rule 5 (declaration -> fun_declaration .)
    CHAR_STAR       reduce using rule 5 (declaration -> fun_declaration .)
    INT_STAR        reduce using rule 5 (declaration -> fun_declaration .)
    {               reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . ID ;
    (7) var_declaration -> type_specifier . ID [ NUM ] = { numlist } ;
    (8) var_declaration -> type_specifier . ID [ NUM ] = STRING ;
    (14) fun_declaration -> type_specifier . ID ( params ) statement_block

    ID              shift and go to state 15


state 7

    (23) statement_block -> { . statement_list }
    (24) statement_list -> . statement_list statement
    (25) statement_list -> .

    }               reduce using rule 25 (statement_list -> .)
    ;               reduce using rule 25 (statement_list -> .)
    {               reduce using rule 25 (statement_list -> .)
    IF              reduce using rule 25 (statement_list -> .)
    WHILE           reduce using rule 25 (statement_list -> .)
    RETURN          reduce using rule 25 (statement_list -> .)
    STRING          reduce using rule 25 (statement_list -> .)
    INT             reduce using rule 25 (statement_list -> .)
    VOID            reduce using rule 25 (statement_list -> .)
    CHAR            reduce using rule 25 (statement_list -> .)
    CHAR_STAR       reduce using rule 25 (statement_list -> .)
    INT_STAR        reduce using rule 25 (statement_list -> .)
    ID              reduce using rule 25 (statement_list -> .)
    (               reduce using rule 25 (statement_list -> .)
    NUM             reduce using rule 25 (statement_list -> .)
    BOOLEAN         reduce using rule 25 (statement_list -> .)

    statement_list                 shift and go to state 16

state 8

    (15) fun_declaration -> statement_block .

    INT             reduce using rule 15 (fun_declaration -> statement_block .)
    VOID            reduce using rule 15 (fun_declaration -> statement_block .)
    CHAR            reduce using rule 15 (fun_declaration -> statement_block .)
    CHAR_STAR       reduce using rule 15 (fun_declaration -> statement_block .)
    INT_STAR        reduce using rule 15 (fun_declaration -> statement_block .)
    {               reduce using rule 15 (fun_declaration -> statement_block .)
    $end            reduce using rule 15 (fun_declaration -> statement_block .)


state 9

    (9) type_specifier -> INT .

    ID              reduce using rule 9 (type_specifier -> INT .)


state 10

    (10) type_specifier -> VOID .

    ID              reduce using rule 10 (type_specifier -> VOID .)


state 11

    (11) type_specifier -> CHAR .

    ID              reduce using rule 11 (type_specifier -> CHAR .)


state 12

    (12) type_specifier -> CHAR_STAR .

    ID              reduce using rule 12 (type_specifier -> CHAR_STAR .)


state 13

    (13) type_specifier -> INT_STAR .

    ID              reduce using rule 13 (type_specifier -> INT_STAR .)


state 14

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR_STAR       reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT_STAR        reduce using rule 2 (declaration_list -> declaration_list declaration .)
    {               reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 15

    (6) var_declaration -> type_specifier ID . ;
    (7) var_declaration -> type_specifier ID . [ NUM ] = { numlist } ;
    (8) var_declaration -> type_specifier ID . [ NUM ] = STRING ;
    (14) fun_declaration -> type_specifier ID . ( params ) statement_block

    ;               shift and go to state 17
    [               shift and go to state 18
    (               shift and go to state 19


state 16

    (23) statement_block -> { statement_list . }
    (24) statement_list -> statement_list . statement
    (26) statement -> . expression_statement
    (27) statement -> . statement_block
    (28) statement -> . if_else_statements
    (29) statement -> . while_statments
    (30) statement -> . return_statements
    (31) statement -> . var_declaration
    (32) expression_statement -> . expression ;
    (33) expression_statement -> . ;
    (23) statement_block -> . { statement_list }
    (34) if_else_statements -> . IF ( expression ) statement
    (35) if_else_statements -> . IF ( expression ) statement ELSE statement
    (36) while_statments -> . WHILE ( expression ) statement
    (37) return_statements -> . RETURN ;
    (38) return_statements -> . RETURN expression ;
    (6) var_declaration -> . type_specifier ID ;
    (7) var_declaration -> . type_specifier ID [ NUM ] = { numlist } ;
    (8) var_declaration -> . type_specifier ID [ NUM ] = STRING ;
    (39) expression -> . var = expression
    (40) expression -> . simple_expression
    (41) expression -> . type_specifier var = expression
    (42) expression -> . STRING
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . CHAR_STAR
    (13) type_specifier -> . INT_STAR
    (45) var -> . ID
    (46) var -> . ID [ expression ]
    (47) simple_expression -> . addsub_object relational_operator addsub_object
    (48) simple_expression -> . addsub_object
    (55) addsub_object -> . addsub_object add_sub muldiv_object
    (56) addsub_object -> . muldiv_object
    (57) muldiv_object -> . muldiv_object mul_div object
    (58) muldiv_object -> . object
    (63) object -> . ( expression )
    (64) object -> . var
    (65) object -> . fun_value
    (66) object -> . NUM
    (67) object -> . BOOLEAN
    (68) fun_value -> . ID ( args )

    }               shift and go to state 20
    ;               shift and go to state 29
    {               shift and go to state 7
    IF              shift and go to state 30
    WHILE           shift and go to state 32
    RETURN          shift and go to state 33
    STRING          shift and go to state 37
    INT             shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    CHAR_STAR       shift and go to state 12
    INT_STAR        shift and go to state 13
    ID              shift and go to state 35
    (               shift and go to state 31
    NUM             shift and go to state 36
    BOOLEAN         shift and go to state 44

    statement                      shift and go to state 21
    expression_statement           shift and go to state 22
    statement_block                shift and go to state 23
    if_else_statements             shift and go to state 24
    while_statments                shift and go to state 25
    return_statements              shift and go to state 26
    var_declaration                shift and go to state 27
    expression                     shift and go to state 28
    type_specifier                 shift and go to state 34
    var                            shift and go to state 38
    simple_expression              shift and go to state 39
    addsub_object                  shift and go to state 40
    muldiv_object                  shift and go to state 41
    object                         shift and go to state 42
    fun_value                      shift and go to state 43

state 17

    (6) var_declaration -> type_specifier ID ; .

    INT             reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    CHAR            reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    CHAR_STAR       reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    INT_STAR        reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    {               reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    $end            reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    }               reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    ;               reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    IF              reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    STRING          reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    (               reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    NUM             reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    BOOLEAN         reduce using rule 6 (var_declaration -> type_specifier ID ; .)
    ELSE            reduce using rule 6 (var_declaration -> type_specifier ID ; .)


state 18

    (7) var_declaration -> type_specifier ID [ . NUM ] = { numlist } ;
    (8) var_declaration -> type_specifier ID [ . NUM ] = STRING ;

    NUM             shift and go to state 45


state 19

    (14) fun_declaration -> type_specifier ID ( . params ) statement_block
    (16) params -> . param_list
    (17) params -> . VOID
    (18) params -> .
    (19) param_list -> . param_list , param
    (20) param_list -> . param
    (21) param -> . type_specifier ID
    (22) param -> . type_specifier ID [ ]
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . CHAR_STAR
    (13) type_specifier -> . INT_STAR

    VOID            shift and go to state 49
    )               reduce using rule 18 (params -> .)
    INT             shift and go to state 9
    CHAR            shift and go to state 11
    CHAR_STAR       shift and go to state 12
    INT_STAR        shift and go to state 13

    type_specifier                 shift and go to state 46
    params                         shift and go to state 47
    param_list                     shift and go to state 48
    param                          shift and go to state 50

state 20

    (23) statement_block -> { statement_list } .

    INT             reduce using rule 23 (statement_block -> { statement_list } .)
    VOID            reduce using rule 23 (statement_block -> { statement_list } .)
    CHAR            reduce using rule 23 (statement_block -> { statement_list } .)
    CHAR_STAR       reduce using rule 23 (statement_block -> { statement_list } .)
    INT_STAR        reduce using rule 23 (statement_block -> { statement_list } .)
    {               reduce using rule 23 (statement_block -> { statement_list } .)
    $end            reduce using rule 23 (statement_block -> { statement_list } .)
    }               reduce using rule 23 (statement_block -> { statement_list } .)
    ;               reduce using rule 23 (statement_block -> { statement_list } .)
    IF              reduce using rule 23 (statement_block -> { statement_list } .)
    WHILE           reduce using rule 23 (statement_block -> { statement_list } .)
    RETURN          reduce using rule 23 (statement_block -> { statement_list } .)
    STRING          reduce using rule 23 (statement_block -> { statement_list } .)
    ID              reduce using rule 23 (statement_block -> { statement_list } .)
    (               reduce using rule 23 (statement_block -> { statement_list } .)
    NUM             reduce using rule 23 (statement_block -> { statement_list } .)
    BOOLEAN         reduce using rule 23 (statement_block -> { statement_list } .)
    ELSE            reduce using rule 23 (statement_block -> { statement_list } .)


state 21

    (24) statement_list -> statement_list statement .

    }               reduce using rule 24 (statement_list -> statement_list statement .)
    ;               reduce using rule 24 (statement_list -> statement_list statement .)
    {               reduce using rule 24 (statement_list -> statement_list statement .)
    IF              reduce using rule 24 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 24 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 24 (statement_list -> statement_list statement .)
    STRING          reduce using rule 24 (statement_list -> statement_list statement .)
    INT             reduce using rule 24 (statement_list -> statement_list statement .)
    VOID            reduce using rule 24 (statement_list -> statement_list statement .)
    CHAR            reduce using rule 24 (statement_list -> statement_list statement .)
    CHAR_STAR       reduce using rule 24 (statement_list -> statement_list statement .)
    INT_STAR        reduce using rule 24 (statement_list -> statement_list statement .)
    ID              reduce using rule 24 (statement_list -> statement_list statement .)
    (               reduce using rule 24 (statement_list -> statement_list statement .)
    NUM             reduce using rule 24 (statement_list -> statement_list statement .)
    BOOLEAN         reduce using rule 24 (statement_list -> statement_list statement .)


state 22

    (26) statement -> expression_statement .

    }               reduce using rule 26 (statement -> expression_statement .)
    ;               reduce using rule 26 (statement -> expression_statement .)
    {               reduce using rule 26 (statement -> expression_statement .)
    IF              reduce using rule 26 (statement -> expression_statement .)
    WHILE           reduce using rule 26 (statement -> expression_statement .)
    RETURN          reduce using rule 26 (statement -> expression_statement .)
    STRING          reduce using rule 26 (statement -> expression_statement .)
    INT             reduce using rule 26 (statement -> expression_statement .)
    VOID            reduce using rule 26 (statement -> expression_statement .)
    CHAR            reduce using rule 26 (statement -> expression_statement .)
    CHAR_STAR       reduce using rule 26 (statement -> expression_statement .)
    INT_STAR        reduce using rule 26 (statement -> expression_statement .)
    ID              reduce using rule 26 (statement -> expression_statement .)
    (               reduce using rule 26 (statement -> expression_statement .)
    NUM             reduce using rule 26 (statement -> expression_statement .)
    BOOLEAN         reduce using rule 26 (statement -> expression_statement .)
    ELSE            reduce using rule 26 (statement -> expression_statement .)


state 23

    (27) statement -> statement_block .

    }               reduce using rule 27 (statement -> statement_block .)
    ;               reduce using rule 27 (statement -> statement_block .)
    {               reduce using rule 27 (statement -> statement_block .)
    IF              reduce using rule 27 (statement -> statement_block .)
    WHILE           reduce using rule 27 (statement -> statement_block .)
    RETURN          reduce using rule 27 (statement -> statement_block .)
    STRING          reduce using rule 27 (statement -> statement_block .)
    INT             reduce using rule 27 (statement -> statement_block .)
    VOID            reduce using rule 27 (statement -> statement_block .)
    CHAR            reduce using rule 27 (statement -> statement_block .)
    CHAR_STAR       reduce using rule 27 (statement -> statement_block .)
    INT_STAR        reduce using rule 27 (statement -> statement_block .)
    ID              reduce using rule 27 (statement -> statement_block .)
    (               reduce using rule 27 (statement -> statement_block .)
    NUM             reduce using rule 27 (statement -> statement_block .)
    BOOLEAN         reduce using rule 27 (statement -> statement_block .)
    ELSE            reduce using rule 27 (statement -> statement_block .)


state 24

    (28) statement -> if_else_statements .
